# ckb-gbgc

./: .gitattributes  Cargo.toml  README.md
src/: arguments.rs  cli.yaml  client.rs  constants.rs  error.rs  main.rs  preprocess.rs  template.rs
src/data/: competitions.md5sum  mod.rs  specs.toml
src/data/competitions/round-1/: awards.csv  lottery.csv  lottery.py
src/data/competitions/round-2/: epoch_reward_finally.csv  miner_reward_finally.csv
src/data/competitions/round-3/: epoch_reward.csv  miner_reward.csv
src/data/competitions/round-4/: miner_reward.csv
src/data/competitions/round-5/stage-1/: miner_reward.csv
src/data/competitions/round-5/stage-2/: miner_reward.csv
src/module/: asset.rs  config.rs  hash.rs  mod.rs  timestamp.rs  token.rs
